--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,4 +1,23 @@
 .header{
-    background-color: gray;
+    background-image: linear-gradient(rgba($color-secondary,.93),rgba($color-secondary,.93)),url(../img/hero.jpeg);
+    background-position: center;
+    background-size:cover;
     grid-column: full-start / col-end 6;
+
+    display: grid;
+    grid-template-rows: 1fr;
+    // grid-template-columns: ;
+
+    &__logo{
+        height: 3rem;
+    }
+    &__seenon-text{
+
+    }
+
+    &__seenon-logos{
+        img{
+            height: 2.5rem;
+        }
+    } 
 }
