--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -3,21 +3,59 @@
     background-position: center;
     background-size:cover;
     grid-column: full-start / col-end 6;
+    padding: 8rem;
+    padding-top: 4rem;
 
     display: grid;
-    grid-template-rows: 1fr;
+    grid-template-rows: 1fr min-content minmax(6rem, min-content) 1fr;
+    grid-template-columns: maxmin(min-content,max-content);
+    grid-row-gap: 1.5rem;
+    justify-content: center;
+
     // grid-template-columns: ;
+    @media only screen and (max-width: $bp-medium){
+        grid-column: 1 / -1;
+    }
+    @media only screen and (max-width: $bp-small){
+        padding: 5rem;
+    }
 
     &__logo{
         height: 3rem;
+        justify-self: center;
     }
     &__seenon-text{
-
+        font-size: 1.6rem;
+        color: $color-grey-light-2;
+        
+        display:grid;
+        grid-gap: 1.5rem;
+        grid-template-columns: 1fr max-content 1fr;
+        align-items: center;
+        
+        &:after,&:before{
+            content: ' ';
+            display:block;
+            height: 1px;
+            background-color: currentColor;
+        }
     }
-
+    &__btn{
+        align-self: start;
+        justify-self: start;
+    }
     &__seenon-logos{
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        grid-gap: 3rem;
+        justify-items: center;
+        align-items: center;
+
         img{
-            height: 2.5rem;
+            max-height: 2.5rem;
+            max-width: 100%;
+            -webkit-filter: brightness(70%);
         }
     } 
+
 }
