--- a/sass/_gallery.scss
+++ b/sass/_gallery.scss
@@ -9,6 +9,7 @@
     padding: 1.5rem;
 
     &__item{
+        overflow:hidden;
         &--1{
             grid-row: 1 / span 2;
             grid-column: 1 / span 2;
